# avuru-obs

./: .gitignore  .gitleaks.toml  AGENTS.md  AI_POLICY.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMIT-SIGNING-SETUP.md  CONTRIBUTING.md  GOVERNANCE.md  MAINTAINERS.md  Makefile  README.md  RELEASE-CHECKLIST.md  RELEASING.md  ROADMAP.md  SECURITY.md  STYLE_GUIDE.md
.claude/agents/: playwright-test-generator.md  playwright-test-healer.md  playwright-test-planner.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  design_proposal.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
agent/: Cargo.toml  README.md  build.md
agent/crates/avuru-agent/: Cargo.toml
agent/crates/avuru-agent/src/: main.rs
agent_docs/: README.md  architecture.md  development.md  go_style.md  proto_contracts.md  rust_style.md  tech_stack.md  testing.md  ui_patterns.md
deploy/compose/: README.md  docker-compose.yaml
deploy/helm/: README.md  e2e-helm.sh  values-prod.yaml  values-staging.yaml
design/: README.md  TEMPLATE.md
e2e/: dropin_test.go  go.mod  helm_test.go
gateway/: ocb-manifest.yaml
gateway/schemas/: README.md
hub/: .air.toml  .golangci.yml  Dockerfile  Makefile  README.md  go.mod  go.sum
proto/: README.md
sensor/: README.md
tools/seed/: go.mod  main.go
ui/: Dockerfile  README.md  default.conf.template  eslint.config.mjs  next.config.ts  nginx.conf  package-lock.json  package.json  playwright.config.ts
ui/app/: globals.css  layout.tsx  page.tsx
ui/e2e/: metrics.spec.ts  (+3 more)
(+147 files in other folders)
